# Seems-Fishy

./: .gitignore  CMakeLists.txt  Makefile  SeemsFishy.sln  SeemsFishy.vcxproj  SeemsFishy.vcxproj.filters  compile.bat  main.cpp  triangle.frag  triangle.vert
cmake/: Conan.cmake  StandardProjectSettings.cmake
cuda/: .clang-format  CMakeLists.txt
cuda/cmake/: Conan.cmake
cuda/src/: CMakeLists.txt  common.h  cuda_memory.hpp  cuda_wrapper.h  main.cpp  options.cpp  options.h
cuda/src/scenes/: full_screen_opengl.cpp  full_screen_opengl.cu  full_screen_opengl.h
project_le_cmake/: CMakeLists.txt
project_le_cmake/cmake/: CompilerWarnings.cmake  Conan.cmake
project_le_cmake/src/: CMakeLists.txt  SeemsFishy.sln  compile.bat  main.cpp  triangle.vert
shaders/: triangle.frag  triangle.vert
src/: main.cpp
